src/main/gen/com/github/gabotechs/graphqxlideaplugin/language/GraphQXLParser.java
// This is a generated file. Not intended for manual editing.
package com.github.gabotechs.graphqxlideaplugin.language;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.gabotechs.graphqxlideaplugin.language.psi.GraphQXLTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class GraphQXLParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType type, PsiBuilder builder) {
    parseLight(type, builder);
    return builder.getTreeBuilt();
  }

  public void parseLight(IElementType type, PsiBuilder builder) {
    boolean result;
    builder = adapt_builder_(type, builder, this, null);
    Marker marker = enter_section_(builder, 0, _COLLAPSE_, null);
    result = parse_root_(type, builder);
    exit_section_(builder, 0, marker, type, result, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType type, PsiBuilder builder) {
    return parse_root_(type, builder, 0);
  }

  static boolean parse_root_(IElementType type, PsiBuilder builder, int level) {
    return document(builder, level + 1);
  }

  /* ********************************************************** */
  // description? identifier COLON value_type (EQUALS value_data)? directive*
  public static boolean argument(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "argument")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, ARGUMENT, "<argument>");
    result = argument_0(builder, level + 1);
    result = result && identifier(builder, level + 1);
    result = result && consumeToken(builder, COLON);
    result = result && value_type(builder, level + 1);
    result = result && argument_4(builder, level + 1);
    result = result && argument_5(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // description?
  private static boolean argument_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "argument_0")) return false;
    description(builder, level + 1);
    return true;
  }

  // (EQUALS value_data)?
  private static boolean argument_4(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "argument_4")) return false;
    argument_4_0(builder, level + 1);
    return true;
  }

  // EQUALS value_data
  private static boolean argument_4_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "argument_4_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, EQUALS);
    result = result && value_data(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // directive*
  private static boolean argument_5(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "argument_5")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!directive(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "argument_5", pos)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // PAREN_L argument* PAREN_R
  public static boolean arguments(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "arguments")) return false;
    if (!nextTokenIs(builder, PAREN_L)) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, ARGUMENTS, null);
    result = consumeToken(builder, PAREN_L);
    pinned = result; // pin = 1
    result = result && report_error_(builder, arguments_1(builder, level + 1));
    result = pinned && consumeToken(builder, PAREN_R) && result;
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  // argument*
  private static boolean arguments_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "arguments_1")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!argument(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "arguments_1", pos)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // float_data | int_data | string_data | boolean_data
  public static boolean basic_data(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "basic_data")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, BASIC_DATA, "<basic data>");
    result = float_data(builder, level + 1);
    if (!result) result = int_data(builder, level + 1);
    if (!result) result = string_data(builder, level + 1);
    if (!result) result = boolean_data(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // int | float | boolean | string
  public static boolean basic_type(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "basic_type")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, BASIC_TYPE, "<basic type>");
    result = int_$(builder, level + 1);
    if (!result) result = float_$(builder, level + 1);
    if (!result) result = boolean_$(builder, level + 1);
    if (!result) result = string(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // "Boolean"
  public static boolean boolean_$(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "boolean_$")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, BOOLEAN, "<boolean $>");
    result = consumeToken(builder, "Boolean");
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // "true" | "false"
  public static boolean boolean_data(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "boolean_data")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, BOOLEAN_DATA, "<boolean data>");
    result = consumeToken(builder, "true");
    if (!result) result = consumeToken(builder, "false");
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // REGULAR_STRING_PART
  public static boolean char_no_double_quote(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "char_no_double_quote")) return false;
    if (!nextTokenIs(builder, REGULAR_STRING_PART)) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, REGULAR_STRING_PART);
    exit_section_(builder, marker, CHAR_NO_DOUBLE_QUOTE, result);
    return result;
  }

  /* ********************************************************** */
  // schema_def |
  //     schema_ext |
  //     generic_type_def |
  //     type_def |
  //     type_ext |
  //     generic_input_def |
  //     input_def |
  //     input_ext |
  //     enum_def |
  //     enum_ext |
  //     interface_def |
  //     interface_ext |
  //     scalar_def |
  //     scalar_ext |
  //     union_def |
  //     union_ext |
  //     directive_def
  public static boolean def(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "def")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, DEF, "<def>");
    result = schema_def(builder, level + 1);
    if (!result) result = schema_ext(builder, level + 1);
    if (!result) result = generic_type_def(builder, level + 1);
    if (!result) result = type_def(builder, level + 1);
    if (!result) result = type_ext(builder, level + 1);
    if (!result) result = generic_input_def(builder, level + 1);
    if (!result) result = input_def(builder, level + 1);
    if (!result) result = input_ext(builder, level + 1);
    if (!result) result = enum_def(builder, level + 1);
    if (!result) result = enum_ext(builder, level + 1);
    if (!result) result = interface_def(builder, level + 1);
    if (!result) result = interface_ext(builder, level + 1);
    if (!result) result = scalar_def(builder, level + 1);
    if (!result) result = scalar_ext(builder, level + 1);
    if (!result) result = union_def(builder, level + 1);
    if (!result) result = union_ext(builder, level + 1);
    if (!result) result = directive_def(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // multiline_description | one_line_description
  public static boolean description(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "description")) return false;
    if (!nextTokenIs(builder, "<description>", OPEN_QUOTE, OPEN_TRIPLE_QUOTE)) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, DESCRIPTION, "<description>");
    result = multiline_description(builder, level + 1);
    if (!result) result = one_line_description(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // identifier COLON string_data
  public static boolean description_variable(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "description_variable")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, DESCRIPTION_VARIABLE, "<description variable>");
    result = identifier(builder, level + 1);
    pinned = result; // pin = 1
    result = result && report_error_(builder, consumeToken(builder, COLON));
    result = pinned && string_data(builder, level + 1) && result;
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  /* ********************************************************** */
  // DOLLAR_BRACE_L description_variable+ BRACE_R
  public static boolean description_variables(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "description_variables")) return false;
    if (!nextTokenIs(builder, DOLLAR_BRACE_L)) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, DOLLAR_BRACE_L);
    result = result && description_variables_1(builder, level + 1);
    result = result && consumeToken(builder, BRACE_R);
    exit_section_(builder, marker, DESCRIPTION_VARIABLES, result);
    return result;
  }

  // description_variable+
  private static boolean description_variables_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "description_variables_1")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = description_variable(builder, level + 1);
    while (result) {
      int pos = current_position_(builder);
      if (!description_variable(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "description_variables_1", pos)) break;
    }
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // AT identifier function_call?
  public static boolean directive(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "directive")) return false;
    if (!nextTokenIs(builder, AT)) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, DIRECTIVE, null);
    result = consumeToken(builder, AT);
    pinned = result; // pin = 1
    result = result && report_error_(builder, identifier(builder, level + 1));
    result = pinned && directive_2(builder, level + 1) && result;
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  // function_call?
  private static boolean directive_2(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "directive_2")) return false;
    function_call(builder, level + 1);
    return true;
  }

  /* ********************************************************** */
  // description? DIRECTIVE_KEYWORD AT identifier arguments? directive_repeatable? ON_KEYWORD directive_location (PIPE directive_location)*
  public static boolean directive_def(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "directive_def")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, DIRECTIVE_DEF, "<directive def>");
    result = directive_def_0(builder, level + 1);
    result = result && consumeTokens(builder, 1, DIRECTIVE_KEYWORD, AT);
    pinned = result; // pin = 2
    result = result && report_error_(builder, identifier(builder, level + 1));
    result = pinned && report_error_(builder, directive_def_4(builder, level + 1)) && result;
    result = pinned && report_error_(builder, directive_def_5(builder, level + 1)) && result;
    result = pinned && report_error_(builder, consumeToken(builder, ON_KEYWORD)) && result;
    result = pinned && report_error_(builder, directive_location(builder, level + 1)) && result;
    result = pinned && directive_def_8(builder, level + 1) && result;
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  // description?
  private static boolean directive_def_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "directive_def_0")) return false;
    description(builder, level + 1);
    return true;
  }

  // arguments?
  private static boolean directive_def_4(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "directive_def_4")) return false;
    arguments(builder, level + 1);
    return true;
  }

  // directive_repeatable?
  private static boolean directive_def_5(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "directive_def_5")) return false;
    directive_repeatable(builder, level + 1);
    return true;
  }

  // (PIPE directive_location)*
  private static boolean directive_def_8(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "directive_def_8")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!directive_def_8_0(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "directive_def_8", pos)) break;
    }
    return true;
  }

  // PIPE directive_location
  private static boolean directive_def_8_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "directive_def_8_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, PIPE);
    result = result && directive_location(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // "QUERY" |
  //         "MUTATION" |
  //         "SUBSCRIPTION" |
  //         "FIELD_DEFINITION" |
  //         "FIELD" |
  //         "FRAGMENT_DEFINITION" |
  //         "FRAGMENT_SPREAD" |
  //         "INLINE_FRAGMENT" |
  //         "SCHEMA" |
  //         "SCALAR" |
  //         "OBJECT" |
  //         "ARGUMENT_DEFINITION" |
  //         "INTERFACE" |
  //         "UNION" |
  //         "ENUM_VALUE" |
  //         "ENUM" |
  //         "INPUT_OBJECT" |
  //         "INPUT_FIELD_DEFINITION" |
  //         "VARIABLE_DEFINITION"
  public static boolean directive_location(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "directive_location")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, DIRECTIVE_LOCATION, "<directive location>");
    result = consumeToken(builder, "QUERY");
    if (!result) result = consumeToken(builder, "MUTATION");
    if (!result) result = consumeToken(builder, "SUBSCRIPTION");
    if (!result) result = consumeToken(builder, "FIELD_DEFINITION");
    if (!result) result = consumeToken(builder, "FIELD");
    if (!result) result = consumeToken(builder, "FRAGMENT_DEFINITION");
    if (!result) result = consumeToken(builder, "FRAGMENT_SPREAD");
    if (!result) result = consumeToken(builder, "INLINE_FRAGMENT");
    if (!result) result = consumeToken(builder, "SCHEMA");
    if (!result) result = consumeToken(builder, "SCALAR");
    if (!result) result = consumeToken(builder, "OBJECT");
    if (!result) result = consumeToken(builder, "ARGUMENT_DEFINITION");
    if (!result) result = consumeToken(builder, "INTERFACE");
    if (!result) result = consumeToken(builder, "UNION");
    if (!result) result = consumeToken(builder, "ENUM_VALUE");
    if (!result) result = consumeToken(builder, "ENUM");
    if (!result) result = consumeToken(builder, "INPUT_OBJECT");
    if (!result) result = consumeToken(builder, "INPUT_FIELD_DEFINITION");
    if (!result) result = consumeToken(builder, "VARIABLE_DEFINITION");
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // REPEATABLE_KEYWORD
  public static boolean directive_repeatable(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "directive_repeatable")) return false;
    if (!nextTokenIs(builder, REPEATABLE_KEYWORD)) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, REPEATABLE_KEYWORD);
    exit_section_(builder, marker, DIRECTIVE_REPEATABLE, result);
    return result;
  }

  /* ********************************************************** */
  // import* def*
  static boolean document(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "document")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = document_0(builder, level + 1);
    result = result && document_1(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // import*
  private static boolean document_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "document_0")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!import_$(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "document_0", pos)) break;
    }
    return true;
  }

  // def*
  private static boolean document_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "document_1")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!def(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "document_1", pos)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // description? ENUM_KEYWORD identifier directive* enum_selection_set
  public static boolean enum_def(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "enum_def")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, ENUM_DEF, "<enum def>");
    result = enum_def_0(builder, level + 1);
    result = result && consumeToken(builder, ENUM_KEYWORD);
    pinned = result; // pin = 2
    result = result && report_error_(builder, identifier(builder, level + 1));
    result = pinned && report_error_(builder, enum_def_3(builder, level + 1)) && result;
    result = pinned && enum_selection_set(builder, level + 1) && result;
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  // description?
  private static boolean enum_def_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "enum_def_0")) return false;
    description(builder, level + 1);
    return true;
  }

  // directive*
  private static boolean enum_def_3(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "enum_def_3")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!directive(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "enum_def_3", pos)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // EXTEND_KEYWORD ENUM_KEYWORD identifier directive* enum_selection_set?
  public static boolean enum_ext(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "enum_ext")) return false;
    if (!nextTokenIs(builder, EXTEND_KEYWORD)) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, ENUM_EXT, null);
    result = consumeTokens(builder, 2, EXTEND_KEYWORD, ENUM_KEYWORD);
    pinned = result; // pin = 2
    result = result && report_error_(builder, identifier(builder, level + 1));
    result = pinned && report_error_(builder, enum_ext_3(builder, level + 1)) && result;
    result = pinned && enum_ext_4(builder, level + 1) && result;
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  // directive*
  private static boolean enum_ext_3(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "enum_ext_3")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!directive(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "enum_ext_3", pos)) break;
    }
    return true;
  }

  // enum_selection_set?
  private static boolean enum_ext_4(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "enum_ext_4")) return false;
    enum_selection_set(builder, level + 1);
    return true;
  }

  /* ********************************************************** */
  // BRACE_L (field_without_args_without_value | spread_reference)* BRACE_R
  public static boolean enum_selection_set(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "enum_selection_set")) return false;
    if (!nextTokenIs(builder, BRACE_L)) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, ENUM_SELECTION_SET, null);
    result = consumeToken(builder, BRACE_L);
    pinned = result; // pin = 1
    result = result && report_error_(builder, enum_selection_set_1(builder, level + 1));
    result = pinned && consumeToken(builder, BRACE_R) && result;
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  // (field_without_args_without_value | spread_reference)*
  private static boolean enum_selection_set_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "enum_selection_set_1")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!enum_selection_set_1_0(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "enum_selection_set_1", pos)) break;
    }
    return true;
  }

  // field_without_args_without_value | spread_reference
  private static boolean enum_selection_set_1_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "enum_selection_set_1_0")) return false;
    boolean result;
    result = field_without_args_without_value(builder, level + 1);
    if (!result) result = spread_reference(builder, level + 1);
    return result;
  }

  /* ********************************************************** */
  // identifier generic_call?
  public static boolean expandable_ref(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "expandable_ref")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, EXPANDABLE_REF, "<expandable ref>");
    result = identifier(builder, level + 1);
    result = result && expandable_ref_1(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // generic_call?
  private static boolean expandable_ref_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "expandable_ref_1")) return false;
    generic_call(builder, level + 1);
    return true;
  }

  /* ********************************************************** */
  // description? identifier arguments? COLON value_type directive*
  public static boolean field_with_args(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "field_with_args")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, FIELD_WITH_ARGS, "<field with args>");
    result = field_with_args_0(builder, level + 1);
    result = result && identifier(builder, level + 1);
    pinned = result; // pin = 2
    result = result && report_error_(builder, field_with_args_2(builder, level + 1));
    result = pinned && report_error_(builder, consumeToken(builder, COLON)) && result;
    result = pinned && report_error_(builder, value_type(builder, level + 1)) && result;
    result = pinned && field_with_args_5(builder, level + 1) && result;
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  // description?
  private static boolean field_with_args_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "field_with_args_0")) return false;
    description(builder, level + 1);
    return true;
  }

  // arguments?
  private static boolean field_with_args_2(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "field_with_args_2")) return false;
    arguments(builder, level + 1);
    return true;
  }

  // directive*
  private static boolean field_with_args_5(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "field_with_args_5")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!directive(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "field_with_args_5", pos)) break;
    }
    return true;
  }
